--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi == 0.115.14
-uvicorn == 0.35.0
-sqlmodel == 0.0.24
-python-multipart == 0.0.20
-pymupdf == 1.26.1
-transformers == 4.53.0
+fastapi==0.115.14
+PyMuPDF==1.26.1
+python-multipart==0.0.20
+sqlmodel==0.0.24
+torch==2.7.1
+transformers==4.53.0
+uvicorn==0.35.0
